responsive home page changes made

--- a/index.html
+++ b/index.html
@@ -12,31 +12,32 @@
     <h1>Vishwam Wood Affairs</h1>
 </nav>
     </div>
-    <center>
-        <div class="img container">
+        <section class="hero">
+        <div class="hero-content">
     <img src="home1.png"alt="background image">
     <div class="textbox">
         <h1>welcome to the Vishwam Wood Affairs,with our wood works and Interior Works</h1>
         <p>Get your Customized works with us</p>
     </div>
 </div>
-</center>
-<div class="main">
-    <center>
-    <h1 class="one">Vishwam wood Affairs</h1>
-</center>
+</section>
+
+<main class="main">
+    
+    <h2 class="section-title">Vishwam wood Affairs</h2>
+
     <p id="one">At Vishwam Wood Affairs,we turn wood and space into something truly special.</p>
     <p id="one">With years of Hands on Experience in Carpentry and interior works, we specialize<br> in crafting custom furniture, modular Kitchen, wadrobes,doors,tv unit,dressing table and more.</p>
     <p id="one">Led by Mr.S.Ponnusamy, a skilled Carpenter and continued by his sons Mr.P.Murugesan and Mr.P.Santhana Vadivel<br> and with experienced carpenters Mr.Suresh and Mr.S.Shyam Sundar.<br>Together our family has been creating quality wooden furniture and interior for over years</p>
     <p id="one">📍Based in Coimbatore,Tamilnadu</p>
     <p id="one">📞 Contact Us today-Bring your dream space to life!</p> 
-</div>
-<center>
-<div class="footer">
+    </main>
+
+<footer class="footer">
+    <nav>
     <a href="index.html">Home |</a>
     <a href="catalogue.html">Catalogue |</a>
     <a href="contact.html">Contact Us</a>
-    </center>
-</div>
+  </nav>
+</footer>
 </body>
-</html>
