home page responsive

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>wood</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
@@ -12,9 +12,8 @@
     <h1>Vishwam Wood Affairs</h1>
 </nav>
     </div>
-        <section class="hero">
-        <div class="hero-content">
-    <img src="home1.png"alt="background image">
+        <section class="hero-section">
+    <img src="home1.png"alt="background image" class="hero-img" />
     <div class="textbox">
         <h1>welcome to the Vishwam Wood Affairs,with our wood works and Interior Works</h1>
         <p>Get your Customized works with us</p>
